--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "plant-app",
-    "slug": "plant-app",
+    "name": "Plant App",
+    "slug": "Plant App",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
